<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatheQuiz">

    <Button
        android:id="@+id/button_quit_m"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/ende"
        android:textColor="@color/cardview_dark_background"
        android:textSize="15sp"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toBottomOf="@+id/background_statistik"
        app:layout_constraintEnd_toEndOf="@+id/button_senden_m"
        app:layout_constraintStart_toStartOf="@+id/button_senden_m" />

    <Button
        android:id="@+id/button_senden_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senden"
        android:textColor="@color/cardview_dark_background"
        android:textSize="15sp"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@+id/button_quit_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/hp_bar_mathe"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fortschritt_stat" />

    <ImageView
        android:id="@+id/background_statistik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/text_fortschritt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fortschritt"
        android:textColor="#5D4037"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fortschritt_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_10"
        android:textColor="#6D4C41"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_fortschritt" />

    <TextView
        android:id="@+id/text_anleitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/l_se_die_rechnung"
        android:textColor="#5D4037"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hp_bar_mathe" />

    <TextView
        android:id="@+id/text_angabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/test"
        android:textColor="#4E342E"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_anleitung" />

    <EditText
        android:id="@+id/editText_mathe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_angabe"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no" />


</androidx.constraintlayout.widget.ConstraintLayout>