<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainWindow">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/button_gotoTypeMathematik"
        android:layout_width="286dp"
        android:layout_height="87dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/mathe"
        android:textColor="@color/cardview_dark_background"
        android:textSize="28sp"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@+id/button_gotoDeutschChoose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_gotoDeutschChoose"
        android:layout_width="285dp"
        android:layout_height="89dp"
        android:layout_marginBottom="20dp"
        android:text="@string/deutsch"
        android:textColor="@color/cardview_dark_background"
        android:textSize="28sp"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toTopOf="@+id/button_gotoStatistik"
        app:layout_constraintStart_toStartOf="@+id/button_gotoTypeMathematik" />

    <Button
        android:id="@+id/button_gotoStatistik"
        android:layout_width="285dp"
        android:layout_height="87dp"
        android:layout_marginBottom="50dp"
        android:text="@string/statistik"
        android:textColor="@color/cardview_dark_background"
        android:textSize="28sp"
        app:backgroundTint="@color/button"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/button_gotoDeutschChoose" />

    <ImageView
        android:id="@+id/startscreen_moster"
        android:layout_width="wrap_content"
        android:layout_height="225dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="70dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/monster"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/button_gotoTypeMathematik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.487"
        app:srcCompat="@drawable/dino_307720" />

    <ProgressBar
        android:id="@+id/hp_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/button_gotoTypeMathematik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startscreen_moster" />

    <TextView
        android:id="@+id/textViewProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fortschritt"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_gotoTypeMathematik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hp_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>